<resources>
    <string name="app_name">PokemonGo.Helper</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="menu_delete">Delete</string>

    <string name="title_activity_bookmark">Bookmark</string>
    <string name="btn_fly_start">Start Fly</string>
    <string name="btn_fly_stop">Stop Fly</string>
    <string name="label_fly">Fly To Location</string>
    <string name="btn_set_new_loc">Set New Location</string>
    <string name="bookmark">Bookmark:</string>
    <string name="move_step">Move Step:</string>
    <string name="move_step_hint">Move Step</string>
    <string name="loc_input_hint">Latitude , Longitude</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>

    <string name="location">Location:</string>
    <string name="fly_time">Fly Time(s)</string>
    <string name="bookmark_name">Bookmark Name</string>
    <string name="no_data">No Bookmarks</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="new_location">New Location:</string>
    <string name="auto_move">Auto Move</string>
    <string name="jump">Jump</string>
    <string name="add_mark">Add mark</string>

    <string name="setting">SETTING</string>

    <string name="move_walk">Walk</string>
    <string name="move_bike">Bike</string>
    <string name="move_car">Car</string>

</resources>
