<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bookmark_name"
        android:textColor="@android:color/primary_text_light"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/inputLat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:digits="1234567890."
        android:hint="@string/lat"
        android:inputType="numberDecimal"
        android:textColor="@android:color/primary_text_light"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/inputLon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="1234567890."
        android:hint="@string/lon"
        android:inputType="numberDecimal"
        android:textColor="@android:color/primary_text_light"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>